# SiStER-py

./: .coverage  .gitignore  ARCHITECTURE_VISUAL_GUIDE.md  CLEANUP_REPORT.txt  DOCUMENTATION_INDEX.md  Demonstration_Working.ipynb  FULLY_STAGGERED_GRID_RESEARCH.md  IMPLEMENTATION_COMPLETE_PHASE_0A.md  IMPLEMENTATION_REFERENCE.md  INDEX.md  INDEX_KNOWLEDGE_BASE.md  PHASE2_COMPLETE.md  PHASE_0A_FINAL_COMPLETION_REPORT.md  PHASE_0A_READY_FOR_SPECKIT.md  PHASE_1A_COMPLETION_REPORT.md  PHASE_1A_QUICK_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_HANDOFF.md  PROJECT_STATUS_OVERVIEW.md  PROMPT_0A_ConfigurationManager.txt  README.md  README_KNOWLEDGE_BUILD.md  README_PHASE_0A_COMPLETE.md  README_PHASE_1_START.md  README_RESEARCH.md  README_RIDGE_SIMULATION.md  RESEARCH_SUMMARY.md  RIDGE_DEFORMATION_ANALYSIS.md  RIDGE_DEFORMATION_RESULTS.html  Ridge_Mantle_Flow.ipynb  SISTER_KNOWLEDGE_CONTEXT.md  SPECKIT_IMPLEMENT_SUMMARY.md  SPECKIT_PLAN_COMPLETE.md  SPECKIT_PROMPTS_ENHANCED.md  SPECKIT_PROMPT_DESIGN.md  SPECKIT_SUBMISSION_READY.md  SPECKIT_TASKS_READY.md  START_HERE.md  STOKES_MATHEMATICS.md  WORKFLOW_SUMMARY_SPECKIT_PLAN.md  (+8 more)
SiStER-master/: SiStER_Initialize.m  SiStER_Input_File_continental_rift.m  SiStER_MAIN.m  map_deviatoric_stress.m  map_materials.m  map_plastic_strain.m  map_strain_rate.m  map_temperature.m  map_viscosity.m
docs/: CONFIGURATION_GUIDE.md  GRID_GUIDE.md  PHASE2_API.md  PHASE2_ARCHITECTURE.md  PHASE2_EXAMPLES.md  PHASE2_USER_GUIDE.md  README_PHASE2.md
sister_py/: __init__.py  config.py  (+10 more)
sister_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+32 files in other folders)
