[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sister-py"
version = "0.1.0"
description = "SiSteR-py: Staggered-grid Iterative Solver for the Earth's Rheology in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SiSteR-py Contributors", email = "research@sister-py.org"}
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/user/sister-py"
Repository = "https://github.com/user/sister-py.git"
Documentation = "https://sister-py.readthedocs.io"

[tool.setuptools]
packages = ["sister_py"]

[tool.setuptools.package-data]
sister_py = ["data/**/*.yaml", "data/**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sister_py --cov-report=html --cov-report=term-missing"
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
